--- a/Agustin-index.html
+++ b/Agustin-index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,30 +8,61 @@
     <title>Currículum Vitae</title>
     <link rel="stylesheet" href="Agustin-styles.css">
 </head>
+
 <body>
     <div class="main">
-        
-        <img class="image-profile" src="CV_Agustin.jpg" alt="CV Photo"/>
+
+        <img class="image-profile" src="CV_Agustin.jpg" alt="CV Photo" />
 
         <div class="contact-info">
 
             <h2 class="fn">Agustín Ricardo Rodríguez Mendoza</h2>
 
             <p>
-                <span class="info-icon">&#x2706;</span> <span class="tel">66 34 18740</span><br/>
-                <span class="info-icon">&#x2709;</span> <a class="email" href="mailto:agustin890831@gmail.com">agustin890831@gmail.com</a><br/>
-                <span class="info-icon">&#x2316;</span> <a href="https://goo.gl/maps/SfB8GQe1zKpHdYUq6" target="_blank">Barcelona, España</a><br/>
-                <span class="info-icon">&#x1f13b;</span> <a href="https://www.linkedin.com/in/agust%C3%ADn-ricardo-rodr%C3%ADguez-mendoza-8660ba157" target="_blank">Linkedin</a> 
+                <span class="info-icon">&#x2706;</span> <span class="tel">66 34 18740</span><br />
+                <span class="info-icon">&#x2709;</span> <a class="email"
+                    href="mailto:agustin890831@gmail.com">agustin890831@gmail.com</a><br />
+                <span class="info-icon">&#x2316;</span> <a href="https://goo.gl/maps/SfB8GQe1zKpHdYUq6"
+                    target="_blank">Barcelona, España</a><br />
+                <span class="info-icon">&#x1f13b;</span> <a
+                    href="https://www.linkedin.com/in/agust%C3%ADn-ricardo-rodr%C3%ADguez-mendoza-8660ba157"
+                    target="_blank">Linkedin</a>
             </p>
         </div>
 
         <div class="description">
             <p>
-                Agustín Ricardo Rodríguez Mendoza es Desarrollador .Net con experiencia trabajando en el área de desarrollo de software.
-                Cuenta con más de 5 años trabajando con C# en tecnologías .Net. 
+                Agustín Ricardo Rodríguez Mendoza es Desarrollador .Net con experiencia trabajando en el área de
+                desarrollo de software.
+                Cuenta con más de 5 años trabajando con C# en tecnologías .Net.
                 Flexible ante cambios de tareas y prioridades, colaborando con las necesidades del equipo.
             </p>
         </div>
+
+        <div class="space"></div>
+
+        <dl>
+            <dd class="space"></dd>
+
+            <dt>Formación</dt>
+            <dd>
+                <h3>Ingeniería en Sistemas.</h3>
+                <p>Agosto. 2008 – Septiembre. 2013 <br />
+                    Universidad de la Ciencias Informáticas. La Habana. Cuba.</p>
+            </dd>
+
+            <dd class="space"></dd>
+
+            <dt></dt>
+            <dd>
+                <h3>Full-Stack Web Technologies</h3>
+                <p>Febrero. 2023 – Presente <br />
+                    Universidad Politécnica de Barcelona. Barcelona. España.</p>
+            </dd>
+        </dl>
+
+        <div class="space"></div>
     </div>
 </body>
+
 </html>
