Adding header and fixing spaces

--- a/Agustin-index.html
+++ b/Agustin-index.html
@@ -12,37 +12,39 @@
 <body>
     <div class="main">
 
-        <img class="image-profile" src="CV_Agustin.jpg" alt="CV Photo" />
+        <div>
+            <header>
+                <img class="image-profile" src="CV_Agustin.jpg" alt="CV Photo" />
 
-        <div class="contact-info">
+                <div class="contact-info">
 
-            <h2 class="fn">Agustín Ricardo Rodríguez Mendoza</h2>
+                    <h2 class="fn">Agustín Ricardo Rodríguez Mendoza</h2>
 
-            <p>
-                <span class="info-icon">&#x2706;</span> <span class="tel">66 34 18740</span><br />
-                <span class="info-icon">&#x2709;</span> <a class="email"
-                    href="mailto:agustin890831@gmail.com">agustin890831@gmail.com</a><br />
-                <span class="info-icon">&#x2316;</span> <a href="https://goo.gl/maps/SfB8GQe1zKpHdYUq6"
-                    target="_blank">Barcelona, España</a><br />
-                <span class="info-icon">&#x1f13b;</span> <a
-                    href="https://www.linkedin.com/in/agust%C3%ADn-ricardo-rodr%C3%ADguez-mendoza-8660ba157"
-                    target="_blank">Linkedin</a>
-            </p>
-        </div>
+                    <p>
+                        <span class="info-icon">&#x2706;</span> <span class="tel">66 34 18740</span><br />
+                        <span class="info-icon">&#x2709;</span> <a class="email"
+                            href="mailto:agustin890831@gmail.com">agustin890831@gmail.com</a><br />
+                        <span class="info-icon">&#x2316;</span> <a href="https://goo.gl/maps/SfB8GQe1zKpHdYUq6"
+                            target="_blank">Barcelona, España</a><br />
+                        <span class="info-icon">&#x1f13b;</span> <a
+                            href="https://www.linkedin.com/in/agust%C3%ADn-ricardo-rodr%C3%ADguez-mendoza-8660ba157"
+                            target="_blank">Linkedin</a>
+                    </p>
+                </div>
 
-        <div class="description">
-            <p>
-                Agustín Ricardo Rodríguez Mendoza es Desarrollador .Net con experiencia trabajando en el área de
-                desarrollo de software.
-                Cuenta con más de 5 años trabajando con C# en tecnologías .Net.
-                Flexible ante cambios de tareas y prioridades, colaborando con las necesidades del equipo.
-            </p>
+                <div class="description">
+                    <p>
+                        Agustín Rodríguez es Desarrollador .Net con experiencia trabajando en el
+                        desarrollo de software.
+                        Flexible ante cambios de tareas y prioridades, colaborando con las necesidades del equipo.
+                    </p>
+                </div>
+            </header>
         </div>
 
         <div class="space"></div>
 
         <dl>
-            <dd class="space"></dd>
 
             <dt>Formación</dt>
             <dd>
@@ -50,18 +52,63 @@
                 <p>Agosto. 2008 – Septiembre. 2013 <br />
                     Universidad de la Ciencias Informáticas. La Habana. Cuba.</p>
             </dd>
-
-            <dd class="space"></dd>
-
-            <dt></dt>
             <dd>
                 <h3>Full-Stack Web Technologies</h3>
                 <p>Febrero. 2023 – Presente <br />
                     Universidad Politécnica de Barcelona. Barcelona. España.</p>
             </dd>
-        </dl>
 
-        <div class="space"></div>
+            <dd class="space"></dd>
+
+            <dt>Experiencia</dt>
+            <dd>
+                <h3>Digittude Solutions<span>Consultor Microsoft - Madrid, España - 2023-presente</span></h3>
+                <ul>
+                    <li>Consultor y desarrollador de aplicaciones Microsoft.</li>
+                    <li>Definición e implementación de arquitecturas de software.</li>
+                </ul>
+            </dd>
+            <dt></dt>
+            <dd>
+                <h3>Glovant<span>Desarrollador .Net - Montevideo, Uruguay - 2020-2023</span></h3>
+                <ul>
+                    <li>Desarrollo y despliegue de nuevas funcionalidades.</li>
+                    <li>Corrección de anomalías y soporte y customización para clientes.</li>
+                </ul>
+            </dd>
+            <dt></dt>
+            <dd>
+                <h3>Urudata Software<span>Desarrollador .Net - Montevideo, Uruguay - 2018-2020</span></h3>
+                <ul>
+                    <li>Desarrollo y despliegue de nuevas funcionalidades.</li>
+                    <li>Soporte técnico y definición de requerimientos para sistemas de gestión bancaria.</li>
+                </ul>
+            </dd>
+            <dt></dt>
+            <dd>
+                <h3>ETECSA<span>Desarrollador .Net - La Habana, Cuba - 2013-2018</span></h3>
+                <ul>
+                    <li>Desarrollo de nuevas funcionalidades y refactorización de código.</li>
+                    <li>Corrección de anomalías y soporte al cliente.</li>
+                </ul>
+            </dd>
+
+            <dd class="space"></dd>
+
+            <dt>Habilidades</dt>
+
+            <dd>
+                <h3>Tecnologías</h3>
+                <p>Tecnologías .Net; Microservicios; servicios SOAP, REST y Grpc; RabbitMQ; Elasticsearch;
+                    Redis; Sql Server; Unit Test; Docker; Azure Devops; Domain Driven Design, DDD;
+                    CQRS; Arquitectura hexagonal; Uso de principios SOLID y patrones de diseño.</p>
+
+                <h3>Soft skills</h3>
+                <p>Capacidad de adaptación; Colaboración; Gestión del tiempo; Flexibilidad.</p>
+            </dd>
+
+            <dd class="space"></dd>
+        </dl>
     </div>
 </body>
 
